--- a/dev/playbooks/homeassistant.yml
+++ b/dev/playbooks/homeassistant.yml
@@ -1,29 +1,45 @@
 ---
-- hosts: homeassistant
-
+- hosts: all
+  become: true
+  
   pre_tasks:
     - name: Update APT cache if needed
-      apt: cache_update=true cache_valid_time=3600
+      apt: update_cache=true cache_valid_time=3600
+    - name: Install requirements
+      apt:
+        name: ['gnupg2', 'curl', 'dirmngr', 'software-properties-common', 'vim']
+        update_cache: true
+        state: present
 
   tasks:
     # GENERAL SETUP
+    - name: Add raspbian key
+      apt_key:
+        url: https://archive.raspbian.org/raspbian.public.key
+        state: present
     - name: Adding python repository
-      apt_repository: repo=ppa:deadsnakes/ppa state=present apt_cache=true
+      apt_repository:
+        repo: deb http://raspbian.raspberrypi.org/raspbian {{ ansible_distribution_release }} main
+        state: present
+        update_cache: true
     - name: Install python 3.9
       apt: 
-        name: ['python3.9', 'python3.9-venv', 'curl', 'gnupg2']
-        apt_cache: true
+        name: ['python3', 'python3-dev', 'python3-venv', 'python3-pip', 'python3-setuptools', ]
+        update_cache: true
+        state: present
+    - name: Necessary python packages on host
+      pip:
+        name: ['setuptools', 'virtualenv']
         state: present
     
-    # HOME ASSISTANT
+    ## USERS, GROUPS AND HARDWARE
     - name: General Homeassistant dependencies
       apt:
         name: ['libffi-dev', 'libssl-dev', 'libjpeg-dev', 'zlib1g-dev', 'tzdata',
-        'autoconf', 'build-essential', 'libopenjp2-7', 'libtiff5', 'libturbojpeg']
-        apt_cache: true
+        'autoconf', 'build-essential', 'libopenjp2-7', 'libtiff5', 'libturbojpeg0']
+        update_cache: true
         state: present
     - name: i2c group
-      become: true
       group:
         name: i2c
         state: present
@@ -34,42 +50,50 @@
         groups: ['dialout', 'i2c']
         
     - name: Add gpiomem to dialout
-      become: true
       file:
         path: /dev/gpiomem
         group: dialout
         mode: 0660
     - name: Fix GPIO pins
-      become: true
       file:
         path: /dev/i2c-1
         group: i2c
         mode: 0660
 
     ## RASPBEE II
+    - name: Add raspberry pi archive
+      apt_repository:
+        repo: deb http://archive.raspberrypi.org/debian/ {{ ansible_distribution_release }} main
+        state: present
+
     - name: Install Phoscon
       apt:
-        name: ['i2c-tools' 'build-essential' 'raspberrypi-kernel-headers']
-        apt_cache: true
+        name: ['i2c-tools', 'build-essential', 'raspberrypi-kernel-headers', 'git']
+        update_cache: true
         state: present
     - name: Download Phoscon RaspbeeII-RTC
       git:
         repo: https://github.com/dresden-elektronik/raspbee2-rtc.git
-        dest: /apps/
+        dest: /home/homeassistant/apps/raspbee2-rtc
     - name: Build Phoscon Raspbee2 RTC
       make:
-        chdir: /apps/raspbee2-rtc
-        targets: install
+        chdir: /home/homeassistant/apps/raspbee2-rtc
+
+    - name: Install Phoscon Raspbee2 RTC
+      make:
+        chdir: /home/homeassistant/apps/raspbee2-rtc
+        target: install
+      # TODO: reboot after this install
 
     - name: BUS tools
       apt:
         name: ['i2c-tools', 'libi2c-dev', 'python3-smbus']
-        apt_cache: true
+        update_cache: true
         state: present
     - name: Phoscon Key
       apt_key:
         url: https://phoscon.de/apt/deconz.pub.key
-        state: presente
+        state: present
     - name: Add phoscon repository
       apt_repository:
         repo: deb http://phoscon.de/apt/deconz {{ ansible_distribution_release }} main
@@ -77,9 +101,38 @@
     - name: Install Deconz
       apt:
         name: ['deconz']
-        apt_cache: true
+        update_cache: true
         state: present
 
+    ## HOME ASSISTANT
+    - name: Home Assistant SRV
+      file:
+        path: /srv/homeassistant
+        state: directory
+        owner: homeassistant
+    - name: Create venv for homeassistant
+      pip:
+        virtualenv: /srv/homeassistant
+        name: ['wheel', 'homeassistant']
+
+    ## MQTT
+    - name: Install mosquitto
+      apt:
+        name: ['mosquitto', 'mosquitto-clients']
+        state: present
+    - name: zigbee2mqtt
+      git:
+        repo: https://github.com/Koenkk/zigbee2mqtt.git
+        dest: /opt/zigbee2mqtt
+    - name: Zigbee2MQTT dependencies
+      apt:
+        name: ['nodejs', 'npm', 'git', 'make', 'g++', 'gcc']
+        state: present
+    - name: Setup Zigbee2MQTT
+      npm:
+        ci: true
+        path: /opt/zigbee2mqtt
+    
     # VPN & SECURITY
     # - name: Install Fail2ban
 
